force-app/main/default/objects/DemoMuleSoft__e/DemoMuleSoft__e.object-meta.xml
<CustomObject>
    <label>DemoMuleSoft</label>
    <pluralLabel>DemoMuleSofts</pluralLabel>
</CustomObject>