force-app/main/default/objects/DemoMuleSoft__e/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document</label>
    <type>Checkbox</type>
</CustomField>