force-app/main/default/objects/DemoMuleSoft__e/fields/FireDate__c.field-meta.xml
<CustomField>
    <fullName>FireDate__c</fullName>
    <label>FireDate</label>
    <type>DateTime</type>
</CustomField>